# cf-zalando-ids

./: pyproject.toml
cf_zalando_ids/: Code-2020-07-08.csv  bulk_create.py  cli.py
final-zalando-ids/: men-t-shirt-sku4.csv  men-t-shirt-sku5.csv  reserved.csv  total.csv  women-top-sku1.csv  women-top-sku2.csv  women-top-sku3.csv
tests/: test_bulk_create.py
